# projeto-conclusao

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yaml  main.py  requirements.txt  tree.md
backend/: README.md  alembic.ini  dockerfile  main.py  manage.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 189e653ca3c1_data_source_script.py  212cd4584ef8_requirement_and_task.py  27d3f1f89002_nullable_requirement_code.py  29962d29ac02_add_column_code_to_requirement.py  5ae2a8917aa0_data_sources.py  8b75f166a9a5_data_source_requirement.py  a80d0e85b04c_task.py  b1a5d8c2841f_add_data_source_type_as_an_model.py  bbfd2906a0bb_requirements.py  c9dba7227fc3_task.py  d5bf47ace6c5_remove_requirements.py  d6b813c78116_rm_requirements_title.py  d8e50d76e38c_data_source_requirements_tasks.py
backend/src/config/: __init__.py  app.py  controller.py  database.py
backend/src/controller/: base_controller.py  data_source_column_controller.py  data_source_controller.py  data_source_type_controller.py  requirement_controller.py  schema_controller.py  script_generation_controller.py  task_controller.py
backend/src/exceptions/: depencency_exceptions.py  query_execptions.py  rule_exception.py
backend/src/graph/: graph.py
backend/src/models/: __init__.py  review_model.py  state.py  task.py
backend/src/repositories/: base_repository.py  data_source_columns_repository.py  data_source_repository.py  data_source_type_repository.py  requirement_repository.py  task_repository.py
backend/src/schema/: base_schema.py  data_source_column_schema.py  (+6 more)
(+184 files in other folders)
