[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["richard.nunes <richardl1010@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.3.7"
langchain-anthropic = "0.2.0"
langchain-ollama = "0.2.0"
langchain-text-splitters = "0.3.0"
langgraph = "0.2.21"
langsmith = "0.1.131"
langgraph-checkpoint = "1.0.9"
ollama = "0.3.3"
pandas = "2.2.3"
pydantic = "2.8.2"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
langchain-community = "^0.3.7"
sqlalchemy = "2.0.25"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
dependency-injector = "^4.43.0"
alembic = "^1.14.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backend = "main:start"